fixed overflow with min-height

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -12,7 +12,7 @@
   border: 0.5px solid #ddd;
   border-radius: 12px;
   padding: 1.25rem 1rem;
-  height: 180px;
+  min-height: 180px;
   /* width: 100%; */
   min-width: 120px;
   max-width: 120px;
